Fixed more spacing

--- a/style.css
+++ b/style.css
@@ -284,6 +284,10 @@ h1 {
     }
 	.columnSingle{
 		width: 100%;
+		float: left;
+		padding-left: 5%;
+		padding-right: 5%;
+		padding-top: 30px;
 	}
 }
 
